# Proyecto_multi

./: README.md
abb_bridge/: package.xml  setup.cfg  setup.py
abb_irb120_description/: package.xml  setup.cfg  setup.py
abb_irb120_description/config/: controllers.yaml
abb_irb120_description/launch/: irb120_launch.launch.py
abb_irb120_description/meshes/visual/: herramienta.stl
abb_irb120_description/urdf/: irb120_3_58_macro.xacro  irb120_control.xacro  irb120_gazebo.xacro
multi_robot_bringup/: CMakeLists.txt  package.xml
multi_robot_bringup/launch/: gazebo.launch.py  navigation.launch.py  todo_el_sistema.launch.py
multi_robot_bringup/models/ground/: model.config  model.sdf
multi_robot_bringup/models/hazardous_barrel/: model.config  model.sdf
multi_robot_bringup/models/r_escombros/: model.config  model.sdf
multi_robot_bringup/world/: myworld.world
proyecto/: package.xml  setup.py
proyecto/launch/: gazebo.launch.py
proyecto/worlds/: myworld.world
prueba/: package.xml  setup.py
prueba/prueba/: prueba_comunicacion.py
rover_description/: CMakeLists.txt  package.xml
rover_description/launch/: display.launch.py
rover_description/urdf/: diff_drive.xacro  lidar.xacro  rover.xacro
rover_navigation/: CMakeLists.txt  package.xml  setup.py
rover_navigation/config/: nav2_params.yaml
rover_navigation/launch/: navigation.launch.py
rover_navigation/rover_navigation/: seguidor_dron.py
uav_vision/: package.xml  setup.py
uav_vision/launch/: vision.launch.py
uav_vision/uav_vision/: detector_objetos.py  dron_autonomo.py  teleop_dron.py
(+5 files in other folders)
